--- a/package.json
+++ b/package.json
@@ -49,8 +49,8 @@
     "zod": "^3.0.0"
   },
   "devDependencies": {
-    "@firebase/testing": "^0.20.11",
     "@firebase/rules-unit-testing": "^4.0.1",
+    "@firebase/testing": "^0.20.11",
     "@types/jest": "^29.5.14",
     "@types/node": "^18.0.0 || ^20.0.0",
     "@typescript-eslint/eslint-plugin": "^6.0.0 || ^7.0.0",
@@ -71,5 +71,8 @@
   },
   "engines": {
     "node": ">=16.0.0"
+  },
+  "dependencies": {
+    "dotenv": "^16.5.0"
   }
 }
