--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -1,12 +1,8 @@
 name: CI
-on: pull_request
+on: push
 jobs:
     build:
         runs-on: ubuntu-latest
-        env:
-          FIREBASE_PROJECT_ID: ${{ secrets.FIREBASE_PROJECT_ID }}
-          FIREBASE_CLIENT_EMAIL: ${{ secrets.FIREBASE_CLIENT_EMAIL }}
-          FIREBASE_PRIVATE_KEY: ${{ secrets.FIREBASE_PRIVATE_KEY }}
         steps:
             - uses: actions/checkout@v3
             - uses: actions/setup-node@v3
@@ -16,16 +12,11 @@ jobs:
             - name: Install Dependencies
               run: npm ci
 
-            - name: Generate .env for tests
-              run: |
-                cat > .env <<EOF
-                FIREBASE_PROJECT_ID=${{ secrets.FIREBASE_PROJECT_ID }}
-                FIREBASE_CLIENT_EMAIL=${{ secrets.FIREBASE_CLIENT_EMAIL }}
-                FIREBASE_PRIVATE_KEY=${{ secrets.FIREBASE_PRIVATE_KEY }}
-                EOF
-
             - name: Build
               run: npm run build
 
             - name: Test
               run: npm run test
+
+            - name: Upload coverage to Codecov
+              uses: codecov/codecov-action@v4
