--- a/package.json
+++ b/package.json
@@ -43,11 +43,6 @@
     "url": "https://github.com/Davileal/fireodm/issues"
   },
   "homepage": "https://github.com/Davileal/fireodm#readme",
-  "peerDependencies": {
-    "firebase-admin": "^11.0.0 || ^12.0.0",
-    "reflect-metadata": "^0.1.13 || ^0.2.0",
-    "zod": "^3.0.0"
-  },
   "devDependencies": {
     "@firebase/rules-unit-testing": "^4.0.1",
     "@firebase/testing": "^0.20.11",
@@ -66,13 +61,14 @@
     "rimraf": "^5.0.0",
     "ts-jest": "^29.3.2",
     "ts-node": "^10.9.1",
-    "typescript": "^5.0.0",
-    "zod": "^3.22.4"
+    "typescript": "^5.0.0"
   },
   "engines": {
     "node": ">=16.0.0"
   },
   "dependencies": {
-    "dotenv": "^16.5.0"
+    "dotenv": "^16.5.0",
+    "reflect-metadata": "^0.1.13 || ^0.2.0",
+    "zod": "^3.22.4"
   }
 }
