--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
     "eslint": "^8.0.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
-    "firebase-admin": "^12.0.0",
+    "firebase-admin": "^13.0.0",
     "firebase-tools": "^14.2.1",
     "jest": "^29.7.0",
     "prettier": "^3.0.0",
@@ -70,5 +70,8 @@
     "dotenv": "^16.5.0",
     "reflect-metadata": "^0.1.13 || ^0.2.0",
     "zod": "^3.22.4"
+  },
+  "peerDependencies": {
+    "firebase-admin": "^13.0.0"
   }
 }
